--- a/faq.html
+++ b/faq.html
@@ -206,7 +206,7 @@ and is wrapped around the whole page content. -->
 			<p class='w3-text-black topp-margin'><b>Where can I send feedback or report bugs?</b></p>
 			
 			<p>Please feel free to email your thoughts or ideas to:<br>
-				<span class="w3-text-pink"><b>contact -at- woza -dot- work</b></span></p>
+				<span class="w3-text-pink"><b>contact -at- retinodeep -dot- vercel.app</b></span></p>
 				
 				
 			
@@ -226,7 +226,7 @@ and is wrapped around the whole page content. -->
 
 <!-- Bottom Bar -->
 <div class='w3-center w3-margin-top'>
-<p class="space-letters"><a class="w3-small w3-hover-text-deep-orange text-color" href="https://woza.work/">
+<p class="space-letters"><a class="w3-small w3-hover-text-deep-orange text-color" href="https://retinodeep.vercel.app/">
 		<b>woza.work</b></a>
 	</p>
 </div>
